--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,6 +1,23 @@
 <resources>
+
+    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
-        <item name="android:editTextBackground">@android:color/transparent</item>
+        <!-- Customize your theme here. -->
+        <item name="android:textColor">#000000</item>
+
+        <!-- Add the following line to set the default status bar color for all the app. -->
+        <item name="android:statusBarColor">@color/app_bg</item>
+        <!-- Add the following line to set the default status bar text color for all the app 
+        to be a light color (false) or a dark color (true) -->
+        <item name="android:windowLightStatusBar">false</item>
+        <!-- Add the following line to set the default background color for all the app. -->
+        <item name="android:windowBackground">@color/app_bg</item>
     </style>
+
+    <!-- Adds the splash screen definition -->
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/splashscreen_bg</item>
+        <item name="android:background">@drawable/background_splash</item>
+    </style>
+
 </resources>
