deleted splash icons and added vector logo as splash icon

--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -5,9 +5,7 @@
         android:drawable="@color/splashscreen_bg"/>
 
     <item
-        android:width="300dp"
-        android:height="300dp"
-        android:drawable="@mipmap/splash_icon"
+        android:drawable="@drawable/ecency_logo"
         android:gravity="center" />
 
 </layer-list>
