--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <item name="splashBackground" type="color">#ffffff</item>
     <item name="notification_icon" type="color">#ffffff</item>
     <color name="primary_dark">#000000</color>
-    <color name="splashscreen_bg">#ffffff</color>
     <color name="app_bg">#ffffff</color>
+    <color name="bootsplash_background">#FFFFFF</color>
 </resources>
